# egui_serial_term

./: Cargo.toml  README.md
examples/custom_bindings/: Cargo.toml  README.md
examples/custom_bindings/src/: app.rs
examples/fonts/: Cargo.toml
examples/fonts/src/: app.rs
examples/full_screen/src/: app.rs
examples/serial_monitor/: Cargo.toml  README.md
examples/serial_monitor/src/: app.rs  main.rs
examples/split_view/src/: app.rs
examples/tabs/src/: app.rs
examples/themes/: Cargo.toml
examples/themes/src/: app.rs
src/: lib.rs  simple_manager.rs  view.rs
src/backend/: mod.rs
src/serial_tty/: event_loop.rs  mod.rs  prolific_apple_patch.rs  unix.rs  windows.rs
