[package]
name = "egui_term"
description = "Terminal emulator widget powered by EGUI framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Harzu/egui_term"
categories = ["gui", "terminal", "tty", "shell"]
license = "MIT"

[dependencies]
egui = "0.30.0"
alacritty_terminal = "0.24.1"
anyhow = "1.0.95"
open = "5.3.2"

serde = { version = "1", features = ["derive", "rc"] }
serialport = { version = "4.7.0", features = ["libudev", "serde", "usbportinfo-interface"] }
log = "0.4"
libc = "0.2"
polling = "3.0.0"
[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.1.1"
signal-hook = "0.3.10"