[package]
name = "egui_term"
description = "Terminal emulator widget powered by EGUI framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Harzu/egui_term"
categories = ["gui", "terminal", "tty", "shell"]
license = "MIT"

[dependencies]
egui = "0.30.0"
alacritty_terminal = "0.24.1"
anyhow = "1.0.95"
open = "5.3.2"

serde = { version = "1", features = ["derive", "rc", "derive"] }
log = "0.4"
libc = "0.2"
polling = "3.0.0"
mio-serial = { version = "5.0.6", features = ["libudev", "serde"] }
mio = { version = "*"}

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.1.1"
signal-hook = "0.3.10"
nix = { version = "0.26", default-features = false, features = ["fs", "ioctl", "poll", "signal", "term"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }
# features = ["cguid", "commapi", "errhandlingapi", "fileapi", "guiddef", "handleapi", "minwinbase", "minwindef", "ntdef", "setupapi", "winbase", "winerror", "winnt"]
